src/rules/snapshots/pg_migration_lint__rules__pgm012__tests__add_pk_using_index_non_unique_index_fires.snap
---
source: src/rules/pgm012.rs
expression: findings
---
- rule_id: PGM012
  severity: Major
  message: "ADD PRIMARY KEY USING INDEX 'idx_orders_pk' on table 'orders': referenced index is not UNIQUE."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
