src/rules/snapshots/pg_migration_lint__rules__pgm012__tests__drop_column_from_multi_column_fk_fires.snap
---
source: src/rules/pgm012.rs
expression: findings
---
- rule_id: PGM012
  severity: Minor
  message: "Dropping column 'order_id' from table 'order_items' silently removes foreign key 'fk_order_product' referencing 'order_products'. Verify that the referential integrity guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
