src/rules/snapshots/pg_migration_lint__rules__pgm012__tests__non_unique_index_still_fires.snap
---
source: src/rules/pgm012.rs
assertion_line: 212
expression: findings
---
- rule_id: PGM012
  severity: Major
  message: "ADD PRIMARY KEY on existing table 'orders' without a prior UNIQUE constraint or unique index on column(s) [id]. Create a unique index CONCURRENTLY first, then use ADD PRIMARY KEY USING INDEX."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
