src/rules/snapshots/pg_migration_lint__rules__pgm012__tests__unnamed_fk_shows_column_arrow_description.snap
---
source: src/rules/pgm012.rs
expression: findings
---
- rule_id: PGM012
  severity: Minor
  message: "Dropping column 'customer_id' from table 'orders' silently removes foreign key (customer_id) → customers. Verify that the referential integrity guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
